# movai_ports_and_messages_ce

./: README.md  manifest.txt
.github/workflows/: DeployOnGitRelease.yml  DeployOnMergeMain.yml  TestOnPR.yml
metadata/Ports/: ROS1.json
movai_ports_and_messages_ce/: CMakeLists.txt  package.xml
my_ros_component/: CMakeLists.txt  package.xml
